--- a/wp-content/themes/the-tomorrow/_/css/style.css
+++ b/wp-content/themes/the-tomorrow/_/css/style.css
@@ -220,7 +220,8 @@ fieldset {
   margin: 0;
 }
 input, select, textarea {
-  font: 12px Arial, Helvetica, sans-serif;
+  font: 20px/1.3 'adelle-sans';
+  color: #191919;
 }
 .clear {
   clear: both;
@@ -295,6 +296,9 @@ header.main {
   -o-transition: all 0.5s ease;
   -ms-transition: all 0.5s ease;
   transition: all 0.5s ease;
+}
+header.main form#search_venues_map {
+  display: none;
 }
 header.main .inner {
   width: 988px;
@@ -1479,6 +1483,52 @@ body.internal-page.single-event #content .eo-event-venue-map {
   height: 300px;
 }
 body.internal-page.single-event #content .eventorganiser-event-meta {
+  display: none;
+}
+body.internal-page.page-template-page-venues-php form#search_venues_map {
+  display: block;
+  position: absolute;
+  top: 100px;
+  right: 0;
+  z-index: 99999;
+  width: 240px;
+  height: 40px;
+  background: #fff;
+  -webkit-box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.8);
+  -moz-box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.8);
+  box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.8);
+}
+body.internal-page.page-template-page-venues-php form#search_venues_map input.text {
+  width: 200px;
+  height: 40px;
+  text-indent: 3px;
+  margin: 0;
+  padding: 0;
+  border: none;
+}
+body.internal-page.page-template-page-venues-php form#search_venues_map input.submit {
+  font-size: 0;
+  text-indent: -999999px;
+  display: block;
+  background: transparent url('../i/ico_nav_menu_000.png') no-repeat 0 0;
+  width: 23px;
+  height: 23px;
+  float: right;
+  border: none;
+  margin: 8px 8px 0 0;
+}
+body.internal-page.page-template-page-venues-php header.main {
+  background: transparent;
+  z-index: 2;
+}
+body.internal-page.page-template-page-venues-php .nav_menu_search {
+  display: none;
+}
+body.internal-page.page-template-page-venues-php #fullscreen_map {
+  z-index: 1;
+  position: relative;
+}
+body.internal-page.page-template-page-venues-php footer {
   display: none;
 }
 .addthis_col {
