--- a/wp-content/themes/the-tomorrow/_/lib/scss/style.scss
+++ b/wp-content/themes/the-tomorrow/_/lib/scss/style.scss
@@ -43,7 +43,7 @@ ul {list-style-type: none; margin:0; padding:0;}
 
 /* Miscellaneous conveniences: */
 fieldset { border: none;padding:0; margin:0}
-input, select, textarea {font: 12px Arial, Helvetica, sans-serif;}
+input, select, textarea { font: 20px/1.3 'adelle-sans'; color: $primary-color; }
 .clear {clear:both;}
 br.clear {clear:both; line-height:0; height:0}
 .left {float:left}
@@ -79,6 +79,9 @@ body{ background: #F4F4F0;
 ************************************************/
 
 header.main{
+
+  form#search_venues_map{ display: none; }
+
   height: 140px; text-align: left; position:fixed; background: #fff; color: #fff; text-align: center; top: 0; left: 0; z-index: 9; width: 100%;
 // -webkit-box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.8);
 // -moz-box-shadow:    0px 2px 10px 0px rgba(0, 0, 0, 0.8);
@@ -527,6 +530,23 @@ body.internal-page{
       .eventorganiser-event-meta{ display: none; }
     }    
   }
+
+  &.page-template-page-venues-php{
+    form#search_venues_map{
+      display: block; position: absolute; top: 100px; right: 0; z-index: 99999; width: 240px; height: 40px; background: #fff;
+      -webkit-box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.8);
+      -moz-box-shadow:    0px 2px 10px 0px rgba(0, 0, 0, 0.8);
+      box-shadow:         0px 2px 10px 0px rgba(0, 0, 0, 0.8);
+      input.text { width: 200px; height: 40px; text-indent: 3px; margin: 0; padding: 0; border: none; }
+      input.submit { @include ir; background: transparent url('../i/ico_nav_menu_000.png') no-repeat 0 0; width: 23px; height: 23px; float: right; border: none; margin: 8px 8px 0 0; }
+    }
+    header.main { background: transparent; z-index: 2; }
+    .nav_menu_search { display: none; }
+    #fullscreen_map { z-index: 1; position: relative; }
+    .eo-venue-map {  }
+    footer { display: none; }
+  }
+
 }
 
 .addthis_col { padding: 20px 0; float: left; width: 220px; border-top: 1px solid #414042;
