--- a/wp-content/themes/the-tomorrow/_/lib/scss/style.scss
+++ b/wp-content/themes/the-tomorrow/_/lib/scss/style.scss
@@ -267,7 +267,9 @@ nav#megamenu{
                                     internal page                                */
 
 
-#home_grid{ @include transition(all 0.3s ease); width: 100%; height: 100%; border-top: 1px solid #ccc; border-left: 1px solid #ccc;
+#home_grid{ @include transition(all 0.3s ease); width: 100%; height: 100%; border-top: 1px solid #ccc; border-left: 1px solid #ccc; /* padding-bottom: 40px; // per lasciare lo spazio alla immagine di loading */
+  .pagination { display: none; }
+  #infscr-loading { width: 220px; position: absolute; /* bottom: 0; */ left: 50%; top: 50%; margin-left: -110px; background: #fff; }
   .home_box { position: relative; border-right: 1px solid #ccc; border-bottom: 1px solid #ccc; float: left; height: 239px;
     &.event{
       width: 239px; text-align: left;
@@ -454,7 +456,8 @@ body.internal-page{
 
   &.post-type-archive-letters,
   &.post-type-archive-conversations,
-  &.single-authors
+  &.single-authors,
+  &.tax-themes
   {
     h2 { padding-bottom: 0; }
     p.rules-link{ position: absolute; top: 90px; right: 0px;
@@ -547,6 +550,16 @@ body.internal-page{
     footer { display: none; }
   }
 
+  ul.themes-boxes{
+    li{ width: 329px; height: 140px; float: left; font-size: 19px;
+      a{ font-weight: 700; width: 328px; height: 82px; padding: 57px 0 0 0; float: left; border-right: 1px solid $primary-color; border-bottom: 1px solid $primary-color; text-align: center; display: block; color: $primary-color;
+        span { font-weight: 300; text-transform: uppercase; font-size: 14px; padding-left: .5em; }
+      }
+    &.first_row a { border-top: 1px solid $primary-color; border-left: 1px solid $primary-color; }
+    &.col_1 a { border-left: 1px solid $primary-color; }
+    }
+  }
+
 }
 
 .addthis_col { padding: 20px 0; float: left; width: 220px; border-top: 1px solid #414042;
@@ -620,9 +633,9 @@ footer {
 
 
 /* paginazione standard */
-.navigation {position:relative; padding:10px 0; height:18px; line-height:18px;}
-.navigation span.previous-entries {position:absolute; left:0;}
-.navigation span.next-entries {position:absolute; right:0;}
+.pagination {position:relative; padding:10px 0; height:18px; line-height:18px;}
+.pagination span.prev {position:absolute; left:0;}
+.pagination span.next {position:absolute; right:0;}
 
 /*
 #content.taxonomy_content .entry { display: none; }
